Hide PromoCards scrollbars on safari and fix max-width

--- a/src/views/PromoCards/styles.scss
+++ b/src/views/PromoCards/styles.scss
@@ -4,7 +4,7 @@
 }
 
 .cards {
-	max-width: 21em;
+	max-width: 336px;
 	position: relative;
 	margin: .625em 1.1875em 0 1.1875em; /* 10px 19px 0 19px @ font-size 16 */
 	overflow-y: hidden;
@@ -16,7 +16,12 @@
 	scroll-snap-type: x mandatory;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
+
 
 button {
 	position: absolute;
